fix(signup): makes navigation visible at minimum screen size.

--- a/src/styles/views/signup.scss
+++ b/src/styles/views/signup.scss
@@ -69,7 +69,8 @@
     flex-shrink: 0;
     justify-content: space-between;
     margin-bottom: auto;
-    margin-top: 48px;
+    margin-top: auto;
+    padding: 6px 0;
     width: 330px;
   }
 
